# demandos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml
cicd/: clang-format-configure  format.sh
cmake/: architecture.cmake  build_config.h
dev/: configure_env  kill_qemu.sh
driver/: fs_test_main.c  main.c  simple_test_main.c
include/: argcv.h  blk.h  demandos.h  e.h  ecall.h  event.h  ext2.h  io.h  memory.h  os.h  pci.h  runtime.h  smemory.h  system.h  util.h  virtio.h  virtio_driver.h
ld/: standard.lds
src/: argcv.c  blk.c  boot.S  demandos.c  e.c  ext2.c  io.c  memory.c  os.c  pci.c  runtime.c  smemory.c  strap.S  strap_handler.c  system.S  system.c  util.c  virtio.c  virtio_driver.c
test/: unit_test.c
